--- a/index.html
+++ b/index.html
@@ -250,7 +250,9 @@
             By combining my expertise in software engineering, cloud computing, and data-driven technologies with 
             advanced transportation research, I aspire to contribute to the development of smarter and more resilient distribution systems 
             that address real-world challenges.
-            
+          </p>
+
+          <p>
             For inquiries and collaborations, please reach out at amaliasonia3@gmail.com. 
           </p>
         </section>
@@ -1090,8 +1092,8 @@
 
         <section class="mapbox" data-mapbox>
           <figure>
-            <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d248.1933669841046!2d106.53020086677506!3d-6.20051138493885!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x2e42009c115324e3%3A0x3903859ff6fafad!2sJl.%20Perum%20Bukit%20Tiara%20No.F1%2C%20RW.12%2C%20Pasir%20Jaya%2C%20Kec.%20Cikupa%2C%20Kabupaten%20Tangerang%2C%20Banten%2015710!5e0!3m2!1sid!2sid!4v1719461627980!5m2!1sid!2sid" 
-            width="600" height="450" style="border:0;" allowfullscreen="" loading="lazy" referrerpolicy="no-referrer-when-downgrade"></iframe>
+            <iframe src="https://www.google.com/maps/embed?pb=!1m14!1m12!1m3!1d247.68941123845514!2d110.71562082471927!3d-6.723014282247434!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!5e0!3m2!1sid!2sid!4v1759392250516!5m2!1sid!2sid" 
+              width="600" height="450" style="border:0;" allowfullscreen="" loading="lazy" referrerpolicy="no-referrer-when-downgrade"></iframe>
           </figure>
         </section>
 
